alterado card e brilho

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "netPark",
+  "appName": "Netpark",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
